--- a/App4/app/build.gradle
+++ b/App4/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
    // implementation 'com.github.unsplash:unsplash-photopicker-android:1.0.1'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
